# flashlight-fish

./: README.md  extractCoords.m  mSync_67500.m  mSync_92700.m  main_mSync_67500.m  particleTrack.m  trackFish.m
Simulator/: Boids_ReadMe.txt
Simulator/BoidsCode/: Boids.cabal  build.bat
Simulator/BoidsCode/src/: Boid.hi  Boid.hs  Constants.hi  Constants.hs  Main.hi  Main.hs  Output.hi  Output.hs
data_67500/: ptCoords.mat  tracks.mat
data_92700/: ptCoords.mat  tracks.mat
