name:                 Boids
version:              1.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Rory O'Brien
maintainer:           rory.obrien@nyu.edu
category:             Distribution
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Boids
  main-is:              Main.hs
  other-modules:        Boid, Constants, Output
  build-depends:        base >= 4.7 && < 5, AC-Vector, random, binary, bytestring, filepath, cassava
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options: -O2
